Stream 2/Back End Development/Final Project/static/css/custom.css
.body {
    width: 100%;
    margin: 0 auto;
}

.html {
    height: 100%
}

#container {
    /* Set a specified height, or the minimum height for the background image */
    min-height: 100%;
    /* Set background image to fixed (don't scroll along with the page) */
    /* Center the background image */
    /* Set the background image to no repeat */
    background: no-repeat fixed center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#loading-screen {
    z-index: 1000;
    background-color: #f2f2f2;
    color: #3d4a57;
    position: fixed;
    width: 100%;
    min-height: 100%;
    left: 0;
    text-align: center;
    padding-top: 15%;
}

#loading-circle {
    z-index: 1500;
    border: 20px solid #f3f3f3;
    border-radius: 70%;
    border-top: 20px solid #3498db;
    margin: 0 auto;
    width: 150px;
    height: 150px;
    -webkit-animation: spin 4s linear infinite;
    animation: spin 4s linear infinite;
}

@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

#current-bar-chart,
#gender-row-chart,
#year-bar-chart,
#years-nd,
#honorary-pie-chart,
#appearances-nd,
#year-menu-select,
#name-menu-select,
#url-menu-select {
    width: 100%;
    min-height: 100%;
    margin: 0 auto;
}

.chart-stage {
    background: #f3f3f3;
}

.table-wrapper,
.table wrapper > th {
    width: 100%;
    max-height: 300px;
    overflow: auto;
    border: 1px solid #000;
}

table {
    width: 100%;
    background: #f3f3f3;
    color: #7a7a7a;
}

/* Responsive Breakpoint Design Elements */

/* Extra small devices (phones, etc. less than 768px) */
/* No media query since this is the default in Bootstrap */
/* So we will make our own custom to handle these devices */
@media screen and (min-width: 400px) and (max-width: 768px) {
    #container {
        max-width: 100%;
        margin: 0 auto;
    }

    #years-nd,
    #appearances-nd {
        font-size: 30px;
        color: #7a7a7a;
    }

    .dc-chart g.row text {
        color: #7a7a7a;
        font-size: 10px;
    }

    .dc-select-menu {
        width: 100%;
        height: 100%;
        position: relative;
        vertical-align: middle;
        padding: 1px 0;
        background: #33CC99;
        border-radius: 3px;
        font-size: 12px;
        color: #7a7a7a;
    }

    td, th {
        border: 1px solid #000;
        font-size: 12px;
    }
}

/* Small devices (tablets, etc.) */
@media screen and (min-width: 768px) and (max-width: 992px) {
    #container {
        max-width: 100%;
        margin: 0 auto;
    }

    #years-nd,
    #appearances-nd {
        font-size: 40px;
        color: #7a7a7a;
    }

    .dc-chart g.row text {
        color: #7a7a7a;
        font-size: 12px;
    }

    .dc-select-menu {
        width: 100%;
        height: 100%;
        position: relative;
        vertical-align: middle;
        padding: 2px 0;
        background: #33CC99;
        border-radius: 3px;
        font-size: 14px;
        color: #7a7a7a;
    }

    td, th {
        border: 1px solid #000;
        font-size: 14px;
    }
}

/* Medium devices (desktops, 992px and up) */
@media screen and (min-width: 992px) and (max-width: 1200px) {
    #container {
        max-width: 100%;
        margin: 0 auto;
    }

    #years-nd,
    #appearances-nd {
        font-size: 50px;
        color: #7a7a7a;
    }

    .dc-chart g.row text {
        color: #7a7a7a;
        font-size: 14px;
    }

    .dc-select-menu {
        width: 100%;
        height: 100%;
        position: relative;
        vertical-align: middle;
        padding: 4px 0;
        background: #33CC99;
        border-radius: 3px;
        font-size: 16px;
        color: #7a7a7a;
    }

    td, th {
        border: 1px solid #000;
        font-size: 16px;
    }
}

/* Large devices (large desktops, 1200px and up) */
@media screen and (min-width: 1200px) {
    #container {
        max-width: 100%;
        margin: 0 auto;
    }

    #years-nd,
    #appearances-nd {
        font-size: 60px;
        color: #7a7a7a;
    }

    .dc-chart g.row text {
        color: #7a7a7a;
        font-size: 16px;
    }

    .dc-select-menu {
        width: 100%;
        height: 100%;
        position: relative;
        vertical-align: middle;
        padding: 6px 0;
        background: #33CC99;
        border-radius: 3px;
        font-size: 18px;
        color: #7a7a7a;
    }

    td, th {
        border: 1px solid #000;
        font-size: 18px;
    }
}

